1st exercice done

--- a/1/index.html
+++ b/1/index.html
@@ -9,15 +9,33 @@
 	
 	<body>
 	
-		<h3> Responsive exos </h3>
+		<header>
 		
-		<a href="./1/index.html"> Exo 1 </a>
-		<br>
-		<a href="./2/index.html"> Exo 2 </a>
-		<br>
-		<a href="./3/index.html"> Exo 3 </a>
-		<br>
-		<a href="./4/index.html"> Exo 4 </a>
+			<h2> Header </h2>
+			
+		</header>
+	
+		<section>
+		
+			<p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, sapiente accusamus at veritatis eum architecto illum pariatur 
+				culpa quam quibusdam placeat molestias dolor repudiandae natus soluta, expedita voluptatem? Veritatis, voluptates!
+			</p>
+			
+			<p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, sapiente accusamus at veritatis eum architecto illum pariatur 
+				culpa quam quibusdam placeat molestias dolor repudiandae natus soluta, expedita voluptatem? Veritatis, voluptates!		
+			</p>
+			
+			<p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, sapiente accusamus at veritatis eum architecto illum pariatur 
+				culpa quam quibusdam placeat molestias dolor repudiandae natus soluta, expedita voluptatem? Veritatis, voluptates!			
+			</p>
+		
+		</section>
+		
+		<footer>
+		
+			<h2> Footer </h2>
+			
+		</footer>
 		
 	</body>
 	
